<resources>
    <string name="app_name">NetflixReviewApp</string>
    <string name="searchbutton">Search</string>
    <string name="addButton">Add Movie Review</string>
    <string name="userRevBtn">My Reviews</string>
    <string name="appAbout">About Netflix Reviews</string>
    <string name="appDesc">NetflixReviews allows users to write reviews for their favorite netflix shows and movies</string>
    <string name="appMoreInfo">There is no more information about NetflixReviews as I am still building it</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="menu_home">Home</string>
    <string name="sign_out">Sign Out</string>


    <string name="recentlyViewedLbl">My Reviews</string>
    <string name="addReviewLbl">Create Review</string>
    <string name="TitleLbl">Title :</string>
    <string name="favouritesReviewLbl">Favourite Review\'s</string>
    <string name="appWebsite">https://developers.themoviedb.org</string>
    <string name="reviewLbl">Review :</string>
    <string name="addReviewBtnLbl">Return to list</string>
    <string name="emptyMessageLbl">You have no Review\'s added yet</string>
    <string name="addCaptionLbl">Caption:</string>
    <string name="addCaptionDs">Add Caption Here</string>
    <string name="ratingNum">/10</string>
    <string name="saveReviewBtn">Save changes</string>
    <string name="editReviewLbl">Review:</string>
    <string name="editCaptionLbl">Caption:</string>
    <string name="editTitleLbl">Title:</string>
    <string name="deleteReviewsLbl">Delete Review\'s</string>
    <string name="searchReviewsLbl">Search Movie\'s</string>
    <string name="trendingReviewLbl">What\'s Trending</string>
    <string name="ReleaseDatesLbl">Release Dates</string>

    <string-array name="reviewTypes">
        <item>All Types</item>
        <item>Favourites</item>
    </string-array>

</resources>
